task: [NPM-02] add description to package.json

--- a/boilerplate-npm/package.json
+++ b/boilerplate-npm/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fcc-learn-npm-package-json",
   "author": "tanmayid",
+  "description": "This is an awesome project",
   "dependencies": {
     "express": "^4.14.0"
   },
