task: [NPM-03] add keywords to package.json

--- a/boilerplate-npm/package.json
+++ b/boilerplate-npm/package.json
@@ -2,6 +2,11 @@
   "name": "fcc-learn-npm-package-json",
   "author": "tanmayid",
   "description": "This is an awesome project",
+  "keywords": [
+    "freecodecamp",
+    "backend",
+    "learn"
+  ],
   "dependencies": {
     "express": "^4.14.0"
   },
