trivial: update sample.env

--- a/boilerplate-mongomongoose/sample.env
+++ b/boilerplate-mongomongoose/sample.env
@@ -1,1 +1,3 @@
-MONGO_URI=
+EMAIL=
+PASSWORD=
+MONGO_URI="mongodb+srv://fcc_user:fccPassword01@fccbackend.fk4wg.mongodb.net/FccBackend?retryWrites=true&w=majority&appName=FccBackend"
